--- a/index.html
+++ b/index.html
@@ -1,36 +1,81 @@
+<!DOCTYPE html>
 <html>
+<head>
+  <title>Player11132</title>
+  <link rel="stylesheet" type="text/css" href="styles.css">
+</head>
 <body>
-    <h1>The Brown Bear</h1>
-    <div id="introduction">
-      <h2>About Brown Bears</h2>
-      <p>The brown bear (<em>Ursus arctos</em>) is native to parts of northern Eurasia and North America. Its conservation status is currently <strong>Least Concern</strong>.<br /><br /> There are many subspecies within the brown bear species, including the Atlas bear and the Himalayan brown bear.</p>
-      <h3>Species</h3>
-      <ul>
-        <li>Arctos</li>
-        <li>Collarus</li>
-        <li>Horribilis</li>
-        <li>Nelsoni (extinct)</li>
-      </ul>
-      <h3>Features</h3>
-      <p>Brown bears are not always completely brown. Some can be reddish or yellowish. They have very large, curved claws and huge paws. Male brown bears are often 30% larger than female brown bears. They can range from 5 feet to 9 feet from head to toe.</p>
+
+  <!-- Header -->
+  <nav class="header">
+    <ul>
+      <li class="button"><a class="home" href="#top">Home</a></li>
+      <li class="button"><a class="pagelink" href="#games">Games</a></li>
+      <li class="button"><a class="pagelink" href="#Discord">Discord Bots</a></li>
+      <li class="button"><a class="home" href="#about-me">About Me</a></li>
+      <li class="itext"><h2>Player11132</h2></li>
+    </ul>
+  </nav>
+
+  <div class="welcome">
+      <h1>Player11132</h1>
+      <h4>"!THIS GAME IS STILL IN VERY EARLY DEVELOPMENT!<br>
+        Please except bugs!<br>
+        Thank you ! Player11132"<br>
+        on every game you see, because I can't finish anything
+    </h4>
     </div>
-    <div id="habitat">
-      <h2>Habitat</h2>
-      <h3>Countries with Large Brown Bear Populations</h3>
-      <ol>
-        <li>Russia</li>
-        <li>United States</li>
-        <li>Canada</li>
-      </ol>
-      <h3>Countries with Small Brown Bear Populations</h3>
-      <p>Some countries with smaller brown bear populations include Armenia, Belarus, Bulgaria, China, Finland, France, Greece, India, Japan, Nepal, Poland, Romania, Slovenia, Turkmenistan, and Uzbekistan.</p>
+
+  <div id="games" class="Box">
+      <h1 class="game" style="font-size: xx-large;">
+          Games
+      </h1>
+      <h6 class="game">
+          wich I will probably not finish<br>
+          if they are not finished yet
+      </h6>
+      <div>
+          <ul class="games">
+            <li class="button"><a class="pagelink" href="projectbavo.html">Project:Operation Bravo</a> </li>
+          </ul>
+      </div>
+  </div>
+
+  <div id="Discord" class="Dbox">
+    <h1 class="disc" style="font-size: xx-large;">
+        Discord Bots
+    </h1>
+    <h6 class="disc">
+       yeah I can make those <br>
+       FASINATING
+    </h6>
+    <div>
+        <ul class="bot">
+          <li class="button"><a class="pagelink" href="https://discord.com/api/oauth2/authorize?client_id=796035330662203462&permissions=0&scope=bot">BOI , the amazing Discord Bot</a> </li>
+        </ul>
     </div>
-    <div id="media">
-      <h2>Media</h2>
-      <img src="https://content.codecademy.com/courses/web-101/web101-image_brownbear.jpg" alt="A Brown Bear"/>
-      <video src="https://content.codecademy.com/courses/freelance-1/unit-1/lesson-2/htmlcss1-vid_brown-bear.mp4" width="320" height="240" controls>
-      Video not supported
-      </video>
-    </div>
-  </body>
-  </html>
+</div>
+
+  <div id="discord">
+
+  </div>
+    
+  <div class="banner" id="about-me">
+      <h1 style="color: #575757;">About Me</h1>
+        <p>
+            Hello, my name is Mike, from Romania!<br>
+            You probably know me as Player11132.<br> 
+            I am a game developer and programmer, and now that I made a webpage I am also a webpage designer. 
+            Not really...<br>
+            Also i can't finish any game...<br>
+            Ok there are a few exceptions
+        </p>
+  </div>
+
+  <div id="pr">
+
+  </div>
+
+</div>
+</body>
+</html>
