--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <nav class="header">
     <ul>
       <li class="button"><a class="home" href="#top">Home</a></li>
-      <li class="button"><a class="pagelink" href="#games">Games</a></li>
+      <li class="button"><a class="pagelink" href="#Games">Games</a></li>
       <li class="button"><a class="pagelink" href="#Discord">Discord Bots</a></li>
       <li class="button"><a class="home" href="#about-me">About Me</a></li>
       <li class="itext"><h2>Player11132</h2></li>
@@ -26,7 +26,7 @@
     </h4>
     </div>
 
-  <div id="games" class="Box">
+  <div id="Games" class="Box">
       <h1 class="game" style="font-size: xx-large;">
           Games
       </h1>
@@ -56,9 +56,6 @@
     </div>
 </div>
 
-  <div id="discord">
-
-  </div>
     
   <div class="banner" id="about-me">
       <h1 style="color: #575757;">About Me</h1>
