--- a/projectbavo.html
+++ b/projectbavo.html
@@ -7,9 +7,9 @@
     <body>
         <div class="header">
             <ul>
-                <li class="button"><a class="Back" href="index.html">Home</a></li>
+                <li class="button"><a style="color:white; text-decoration: none;" class="Back" href="index.html">Home</a></li>
                 <li><h4>Project:Operation Bravo</h4></li>
-                <li> <a href="Project Operation Bravo.rar" download class="button">Download</a> </li>
+                <li> <a style="color:white; text-decoration: none;"href="Project Operation Bravo.rar" download class="button">Download</a> </li>
             </ul>
         </div>
         <div class="title">
@@ -20,7 +20,7 @@
                 Please except bugs! <br>
                 Thank you ! Player11132
             </h2>
-            <h1 style="text-align: center;">Description</h1>
+            <h1 style="text-align: center; color:white;">Description</h1>
             <p>
                 Operation Bravo is a FPS game I am currently developing.<br>
                 Operation Bravo will be a multiplayer and singleplayer game.<br>
@@ -28,8 +28,8 @@
                 I still need to set up the mechanics and make the gunplay and gameplay feel good,<br>
                 before I will launch it.<br>
                 The singleplayer will feature a campain and a CoD like zombie game.<br>
-                <a style="text-align: center;" href="Project Operation Bravo.rar" download class="button">Download</a><br>
-                <a style="text-align: center;" href="https://player11132.itch.io/operation-bravo" download class="button">To itch.io</a> 
+                <a style="text-align: center; color:white;" href="Project Operation Bravo.rar" download class="button">Download</a><br>
+                <a style="text-align: center; color:white;" href="https://player11132.itch.io/operation-bravo" download class="button">To itch.io</a> 
             </p>
 
         </div>
