--- a/index.html
+++ b/index.html
@@ -18,11 +18,9 @@
   </nav>
 
   <div class="welcome">
-      <h1>Player11132</h1>
-      <h4>"!THIS GAME IS STILL IN VERY EARLY DEVELOPMENT!<br>
-        Please except bugs!<br>
-        Thank you ! Player11132"<br>
-        on every game you see, because I can't finish anything
+      <h1>Player11132's Games and Stuff</h1>
+      <h4>Where everything is in early development<br>
+          Because profesianals have standards<br>
     </h4>
     </div>
 
@@ -58,14 +56,13 @@
 
     
   <div class="banner" id="about-me">
-      <h1 style="color: #575757;">About Me</h1>
+      <h1>About Me</h1>
         <p>
-            Hello, my name is Mike, from Romania!<br>
-            You probably know me as Player11132.<br> 
+            Hello,You probably know me as Player11132.<br> 
             I am a game developer and programmer, and now that I made a webpage I am also a webpage designer. 
             Not really...<br>
-            Also i can't finish any game...<br>
-            Ok there are a few exceptions
+            Also i can't finish anything<br>
+            Ok there are a few exceptions but still
         </p>
   </div>
 
