--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 </head>
 <body>
 
-  <!-- Header -->
   <nav class="header">
     <ul>
       <li class="button"><a class="home" href="#top">Home</a></li>
@@ -19,9 +18,7 @@
 
   <div class="welcome">
       <h1>Player11132's Games and Stuff</h1>
-      <h4>Where everything is in early development<br>
-          Because profesianals have standards<br>
-    </h4>
+      <h4>Where everything is buggy and not working</h4>
     </div>
 
   <div id="Games" class="Box">
@@ -58,11 +55,12 @@
   <div class="banner" id="about-me">
       <h1>About Me</h1>
         <p>
-            Hello,You probably know me as Player11132.<br> 
-            I am a game developer and programmer, and now that I made a webpage I am also a webpage designer. 
-            Not really...<br>
-            Also i can't finish anything<br>
-            Ok there are a few exceptions but still
+            Hello, im Player11132.<br> 
+            I like programming in general, it doesn't matter if its a website<br>
+            or in unity etc.<br>
+            Also why Player11132 you may ask<br>
+            Well because I have no imagination, and it was the first thing that came to my mind<br>
+            
         </p>
   </div>
 
