--- a/projectbavo.html
+++ b/projectbavo.html
@@ -18,7 +18,9 @@
         <div class="desc" style="  clear: left;">
             <h2 class="warning">!THIS GAME IS STILL IN VERY EARLY DEVELOPMENT!<br>
                 Please except bugs! <br>
-                Thank you ! Player11132
+                Thank you ! Player11132<br>
+                Also the project got corrupted and i need to remake everything<br>
+                So no updates coming any time soon.
             </h2>
             <h1 style="text-align: center; color:white;">Description</h1>
             <p>
