--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
           Games
       </h1>
       <h6 class="game">
-          wich I will probably not finish<br>
-          if they are not finished yet
+          Which I will probably not finish<br>
+          if they are not finished
       </h6>
       <div>
           <ul class="games">
@@ -42,7 +42,7 @@
     </h1>
     <h6 class="disc">
        yeah I can make those <br>
-       FASINATING
+       FASCINATING
     </h6>
     <div>
         <ul class="bot">
@@ -55,17 +55,12 @@
   <div class="banner" id="about-me">
       <h1>About Me</h1>
         <p>
-            Hello, im Player11132.<br> 
-            I like programming in general, it doesn't matter if its a website<br>
-            or in unity etc.<br>
-            Also why Player11132 you may ask<br>
+            Hello, i'm Mike!<br> 
+            I like programming, it doesn't matter if its a website,<br>
+            in unity or just a simple program<br>
+            Also why is my username Player11132?<br>
             Well because I have no imagination, and it was the first thing that came to my mind<br>
-            
         </p>
-  </div>
-
-  <div id="pr">
-
   </div>
 
 </div>
