Gift for a friend

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <li class="button"><a class="pagelink" href="#Games">Games</a></li>
       <li class="button"><a class="pagelink" href="#Discord">Discord Bots</a></li>
       <li class="button"><a class="home" href="#about-me">About Me</a></li>
+      <li class="button"><a class="pagelink" href="redeem.html">Redeem</a> </li>
       <li class="itext"><h2>Player11132</h2></li>
     </ul>
   </nav>
@@ -31,7 +32,7 @@
       </h6>
       <div>
           <ul class="games">
-            <li class="button"><a class="pagelink" href="projectbavo.html">Project:Operation Bravo</a> </li>
+            <li class="button"><a class="pagelink">PBOX / Unavailable</a> </li>
           </ul>
       </div>
   </div>
