--- a/Happybd.html
+++ b/Happybd.html
@@ -1,35 +1,44 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Player11132/Operation Bravo</title>
+        <title>Player11132/Special</title>
         <link rel="stylesheet" type="text/css" href="projectbravostyle.css">
     </head>
     <body>
         <div class="header">
             <ul>
                 <li class="button"><a style="color:white; text-decoration: none;" class="Back" href="index.html">Home</a></li>
-                <li><h4>Happy Birthday Catza!</h4></li>
+                <li><h4>Read carfully pls.</h4></li>
                 
             </ul>
         </div>
         <div class="title">
-            <h1>LA MULTI ANI!</h1>
+            <h1></h1>
         </div>
         <div class="desc" style="  clear: left;">
             <h1 style="text-align: center; color:white;"></h1>
             <p>
-                Salut, sper sa te bucuri de acest mouse pe care ti l-am oferit<br>
-                la momentul acesta sunt obosit si este posibil sa fie greseli gramaticale,<br>
-                Ignora-le.<br>
-                Inca odata iti spun ca imi pare rau ca nu am putut participa la ziua ta, timp de 3 ani<br>
-                poate la anul, btw revino intr-o zi sau doua si o sa gasesti ceva special!<br>
-                Pentru acum:<br>
-                <video controls autoplay>
-                    <source src="song.mp4" type="video/mp4">
-                  </video>
-                  <br>
+                Ok so after all of that cringe stuff is time for the real deal.<br>
+                My other gift for you is a free porgramming course<br>
+                with me as the host.<br>
+                now for this I need your schedule so I can see if im free and<br>
+                you're avalible.<br>
+                To send this info, contact me on whatsapp<br>
 
-                DiEs of CrinGE<br>
+                <br>
+                <br>
+                <b>This is what the course will contain:</b><br>
+                -How to use the unity game engin (interface, packages etc.)<br>
+                -Basic C# for the beginning with some advanced stuff<br>
+                -3D modelling<br>
+                -And making a basic 3D fps<br>
+                <br>
+                Now this is a small summary.
+                <br>I'm also thinking it would span around<br>
+                2-3 months or less depending on our schedule and stuff<br>
+                For today this is all<br>
+                <br>
+                Come back tomorrow for something else<br>
             </p>
 
         </div>
