--- a/redeem.html
+++ b/redeem.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" type="text/css" href="projectbravostyle.css">
 <style>
 /* Style all input fields */
 input {
@@ -22,7 +23,7 @@ input[type=submit] {
 
 /* Style the container for inputs */
 .container {
-  background-color: #f1f1f1;
+  background-color: #8f8f8f;
   padding: 20px;
 }
 
@@ -66,7 +67,7 @@ input[type=submit] {
 </head>
 <body>
 
-<h3>Password Validation</h3>
+<h3>Code Validation</h3>
 <p>Try to submit the form.</p>
 
 <div class="container">
