--- a/index.html
+++ b/index.html
@@ -1,69 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Player11132</title>
+  <title>Telea Mihai - Portofolio</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
 
   <nav class="header">
     <ul>
-      <li class="button"><a class="home" href="#top">Home</a></li>
-      <li class="button"><a class="pagelink" href="#Games">Games</a></li>
-      <li class="button"><a class="pagelink" href="#Discord">Discord Bots</a></li>
-      <li class="button"><a class="home" href="#about-me">About Me</a></li>
-      <li class="button"><a class="pagelink" href="redeem.html">Redeem</a> </li>
-      <li class="itext"><h2>Player11132</h2></li>
+      <li class="itext"><h2>Telea Mihai - Portofolio</h2></li>
     </ul>
   </nav>
-
-  <div class="welcome">
-      <h1>Player11132's Games and Stuff</h1>
-      <h4>Where everything is buggy and not working</h4>
-    </div>
-
-  <div id="Games" class="Box">
-      <h1 class="game" style="font-size: xx-large;">
-          Games
-      </h1>
-      <h6 class="game">
-          Which I will probably not finish<br>
-          if they are not finished
-      </h6>
-      <div>
-          <ul class="games">
-            <li class="button"><a class="pagelink">PBOX / Unavailable</a> </li>
-          </ul>
-      </div>
-  </div>
-
-  <div id="Discord" class="Dbox">
-    <h1 class="disc" style="font-size: xx-large;">
-        Discord Bots
-    </h1>
-    <h6 class="disc">
-       yeah I can make those <br>
-       FASCINATING
-    </h6>
-    <div>
-        <ul class="bot">
-          <li class="button"><a class="pagelink" href="https://discord.com/api/oauth2/authorize?client_id=796035330662203462&permissions=0&scope=bot">BOI , the amazing Discord Bot</a> </li>
-        </ul>
-    </div>
-</div>
-
-    
-  <div class="banner" id="about-me">
-      <h1>About Me</h1>
-        <p>
-            Hello, i'm Mike!<br> 
-            I like programming, it doesn't matter if its a website,<br>
-            in unity or just a simple program<br>
-            Also why is my username Player11132?<br>
-            Well because I have no imagination, and it was the first thing that came to my mind<br>
-        </p>
-  </div>
-
+<div>
+  <br><br><br><br><br><br><br><br>
+  <p>                <h1>Work in progress</h1></p>
 </div>
 </body>
 </html>
